--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,13 +15,16 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'
+          ruby-version: '3.0'
 
       - name: Install Bundler
-        run: gem install bundler -v 2.6.3
+        run: gem install bundler
 
       - name: Install Dependencies
         run: bundle install
 
       - name: Run Fastlane
+        env:
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
         run: bundle exec fastlane beta
+
