--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,10 +12,14 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Remove Old Ruby
+        run: rm -rf /Users/runner/hostedtoolcache/Ruby/*
+
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'
+        ruby-version: '3.1'
+
 
       - name: Install Bundler
         run: gem install bundler
