--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,6 +12,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Select Xcode Version
+        run: sudo xcode-select -s /Applications/Xcode_16.0.app
+
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with: 
