--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -11,31 +11,31 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
+        
       - name: Select Xcode Version
         run: sudo xcode-select -s /Applications/Xcode_16.2.app
-
+        
       - name: Setup Keychain
         run: |
           security create-keychain -p "temp" build.keychain
           security default-keychain -s build.keychain
           security unlock-keychain -p "temp" build.keychain
           security set-keychain-settings -t 3600 -u build.keychain
-
+          
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
-        with: 
-          ruby-version: '3.1' 
-
+        with:
+          ruby-version: '3.1'
+          
       - name: Clean Bundle Cache
         run: rm -rf ~/.bundle && rm -rf vendor/cache && rm -rf Gemfile.lock
-
+        
       - name: Install Bundler
         run: gem install bundler
-
+        
       - name: Install Dependencies
         run: bundle install --jobs 4 --retry 3
-
+        
       - name: Run Fastlane
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
@@ -44,4 +44,7 @@ jobs:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
           FASTLANE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+          APP_STORE_CONNECT_API_KEY_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_KEY_ID }}
+          APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}
+          APP_STORE_CONNECT_API_KEY_KEY: ${{ secrets.APP_STORE_CONNECT_API_KEY_KEY }}
         run: bundle exec fastlane beta
