--- a/.github/workflows/ios-ci-cd.yml
+++ b/.github/workflows/ios-ci-cd.yml
@@ -7,31 +7,7 @@ on:
     branches: [ develop ]
 
 jobs:
-  build-and-test:
-    runs-on: macos-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1'
-          bundler-cache: true
-
-      - name: Install dependencies
-        run: |
-          gem install bundler
-          bundle install
-
-      - name: Run tests
-        run: |
-          bundle exec fastlane test
-        env:
-          FASTLANE_SKIP_UPDATE_CHECK: true
-
   beta-deploy:
-    needs: build-and-test
     runs-on: macos-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
     steps:
@@ -48,6 +24,9 @@ jobs:
         run: |
           gem install bundler
           bundle install
+
+      - name: Select latest Xcode
+        run: sudo xcode-select -s /Applications/Xcode_15.4.app
 
       - name: Setup Provisioning Profile
         env:
