--- a/.github/workflows/ios-ci-cd.yml
+++ b/.github/workflows/ios-ci-cd.yml
@@ -1,63 +1,64 @@
 name: iOS CI/CD
 
 on:
-  push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
+ push:
+   branches: [ develop ]
+ pull_request:
+   branches: [ develop ]
 
 jobs:
-  beta-deploy:
-    runs-on: macos-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1'
-          bundler-cache: true
-
-      - name: Install dependencies
-        run: |
-          gem install bundler
-          bundle install
-
-      - name: Select latest Xcode
-        run: sudo xcode-select -s /Applications/Xcode_16.2.app
-
-      - name: Update Matchfile
-        run: |
-          cat > fastlane/Matchfile << EOL
-          git_url("${{ secrets.MATCH_GIT_URL }}")
-          storage_mode("git")
-          type("development")
-          app_identifier(["WEDLE.Warala"])
-          username("${{ secrets.APPLE_ID }}")
-          EOL
-
-      - name: Setup Provisioning Profile
-        env:
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          FASTLANE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
-          TEAM_ID: ${{ secrets.TEAM_ID }}
-          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-          MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }}
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          bundle exec fastlane match appstore --readonly
-
-      - name: Build and upload to TestFlight
-        env:
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          FASTLANE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
-          TEAM_ID: ${{ secrets.TEAM_ID }}
-          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
-          MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }}
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          bundle exec fastlane beta
+ beta-deploy:
+   runs-on: macos-latest
+   if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
+   steps:
+     - name: Checkout repository
+       uses: actions/checkout@v3
+     
+     - name: Set up Ruby
+       uses: ruby/setup-ruby@v1
+       with:
+         ruby-version: '3.1'
+         bundler-cache: true
+     
+     - name: Install dependencies
+       run: |
+         gem install bundler
+         bundle install
+     
+     - name: Select latest Xcode
+       run: sudo xcode-select -s /Applications/Xcode_16.2.app
+     
+     - name: Update Matchfile
+       run: |
+         cat > fastlane/Matchfile << EOL
+         git_url("${{ secrets.MATCH_GIT_URL }}")
+         storage_mode("git")
+         type("appstore")
+         app_identifier(["WEDLE.Warala"])
+         username("${{ secrets.APPLE_ID }}")
+         team_id("${{ secrets.TEAM_ID }}")
+         EOL
+     
+     - name: Setup Provisioning Profile
+       env:
+         APPLE_ID: ${{ secrets.APPLE_ID }}
+         FASTLANE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+         FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+         TEAM_ID: ${{ secrets.TEAM_ID }}
+         MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+         MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }}
+         GH_PAT: ${{ secrets.GH_PAT }}
+       run: |
+         bundle exec fastlane match appstore --force
+     
+     - name: Build and upload to TestFlight
+       env:
+         APPLE_ID: ${{ secrets.APPLE_ID }}
+         FASTLANE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+         FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+         TEAM_ID: ${{ secrets.TEAM_ID }}
+         MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+         MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }}
+         GH_PAT: ${{ secrets.GH_PAT }}
+       run: |
+         bundle exec fastlane beta
