--- a/.github/workflows/ios-ci-cd.yml
+++ b/.github/workflows/ios-ci-cd.yml
@@ -13,31 +13,32 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+      
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.1'
           bundler-cache: true
-
+      
       - name: Install dependencies
         run: |
           gem install bundler
           bundle install
-
+      
       - name: Select latest Xcode
         run: sudo xcode-select -s /Applications/Xcode_16.2.app
-
+      
       - name: Update Matchfile
         run: |
           cat > fastlane/Matchfile << EOL
           git_url("${{ secrets.MATCH_GIT_URL }}")
           storage_mode("git")
-          type("development")
+          type("appstore")
           app_identifier(["WEDLE.Warala"])
           username("${{ secrets.APPLE_ID }}")
+          team_id("${{ secrets.TEAM_ID }}")
           EOL
-
+      
       - name: Setup Provisioning Profile
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
@@ -48,8 +49,8 @@ jobs:
           MATCH_GIT_URL: ${{ secrets.MATCH_GIT_URL }}
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          bundle exec fastlane match appstore --readonly
-
+          bundle exec fastlane match appstore --force
+      
       - name: Build and upload to TestFlight
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
