--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -2,9 +2,9 @@ name: iOS CI (Develop Branch)
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ develop ]
+    branches: [ "develop" ]
 
 jobs:
   build-and-test:
@@ -13,27 +13,73 @@ jobs:
     
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
-      - name: Cache CocoaPods packages
+      - name: Cache Swift packages
         uses: actions/cache@v3
         with:
-          path: Pods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
+          path: .build
+          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
           restore-keys: |
-            ${{ runner.os }}-pods-
+            ${{ runner.os }}-spm-
       
-      - name: Install CocoaPods Dependencies
+      - name: Set Default Scheme
         run: |
-          pod install --repo-update
+          scheme_list=$(xcodebuild -list -json | tr -d "\n")
+          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
+          echo $default | cat >default
+          echo Using default scheme: $default
       
-      - name: Build and Test
+      - name: Build
         env:
-          scheme: PetApp
+          scheme: $(cat default)
           platform: iOS Simulator
-          device: iPhone 14
         run: |
-          xcodebuild clean test -workspace PetApp.xcworkspace -scheme "$scheme" -destination "platform=$platform,name=$device" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+          # Xcode 프로젝트/워크스페이스 자동 감지
+          if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then 
+            filetype_parameter="workspace" 
+            file_to_build="`ls -A | grep -i \\.xcworkspace\$`"
+          else 
+            filetype_parameter="project" 
+            file_to_build="`ls -A | grep -i \\.xcodeproj\$`"
+          fi
+          file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
+          
+          # 사용 가능한 시뮬레이터 찾기
+          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
+          
+          # 빌드
+          xcodebuild build-for-testing \
+            -"$filetype_parameter" "$file_to_build" \
+            -scheme "$scheme" \
+            -destination "platform=$platform,name=$device" \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO
+      
+      - name: Test
+        env:
+          scheme: $(cat default)
+          platform: iOS Simulator
+        run: |
+          # Xcode 프로젝트/워크스페이스 자동 감지
+          if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then 
+            filetype_parameter="workspace" 
+            file_to_build="`ls -A | grep -i \\.xcworkspace\$`"
+          else 
+            filetype_parameter="project" 
+            file_to_build="`ls -A | grep -i \\.xcodeproj\$`"
+          fi
+          file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
+          
+          # 사용 가능한 시뮬레이터 찾기
+          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
+          
+          # 테스트
+          xcodebuild test-without-building \
+            -"$filetype_parameter" "$file_to_build" \
+            -scheme "$scheme" \
+            -destination "platform=$platform,name=$device"
       
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
